FIX - Wrap home slides URL in admin section

--- a/assets/styles/bootstrap/less/thumbnails.less
+++ b/assets/styles/bootstrap/less/thumbnails.less
@@ -36,5 +36,10 @@
 
   p {
     overflow: auto;
+    white-space: pre-wrap; /* CSS3 */
+    white-space: -moz-pre-wrap; /* Firefox */
+    white-space: -pre-wrap; /* Opera <7 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* IE */
   }
 }
